# rust-trial

./: Cargo.toml
.github/workflows/: audit.yml  ci.yml  job.yml  job2.yml
src/: main.rs
